--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(IG_2017)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp Punto.h Vector.h Tupla.h)
+set(SOURCE_FILES main.cpp Punto.h Vector.h Tupla.h Esfera.h Punto_Superficie.h)
 add_executable(IG_2017 ${SOURCE_FILES})
